<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bmtc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="setprofilepicture">setProfilePicture</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="cleartrip_pvt_ltd_">Cleartrip Pvt. Ltd.</string>
    <string name="b_m_t_c_">B.M.T.C.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit_application">Submit Application</string>
    <string name="set_photo">Set Photo</string>
    <string name="vajra_a_c_pass">Vajra A/C pass</string>
    <string name="parisaravahini_non_a_c_bus_pass">ParisaraVahini Non A/C bus pass</string>
    <string name="valid_through_">"Validity: "</string>
    <string name="powered_by">Powered by</string>
    <string name="b_m_t_c">B.M.T.C.</string>
    <string name="buy_a_new_pass">Buy a new pass</string>
    <string name="display_existing_pass">Display existing pass</string>
    <string name="buy_pass">Buy Pass</string>
    <string name="display_pass">Display Pass</string>

</resources>
