<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/touchnGo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/errorString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="#ff0000"
            android:textSize="12sp"
            />
        
        <TextView
            android:id="@+id/passTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select pass type"
            android:padding="16dp"
            android:textSize="17sp" >
            
        </TextView>        
  <!--       <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/passType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/vajra_a_c_pass" />

            <RadioButton
                android:id="@+id/passType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/parisaravahini_non_a_c_bus_pass" />
        </RadioGroup> -->

        <RelativeLayout
            android:id="@+id/profilePictureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/setProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/setprofilepicture"
                android:maxHeight="120dp"
                android:maxWidth="80dp" />

            <TextView
                android:id="@+id/setProfilePictureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="false"
                android:hint="@string/set_photo"
                android:padding="16dp"
                android:textSize="17sp" />

        </RelativeLayout>
        <!--
             <TextView
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="17sp" />
        -->

        <EditText
            android:id="@+id/nameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="16dp" >

        </EditText>

        <!--
              <TextView
            android:id="@+id/addressField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textSize="17sp" />
        -->

        <EditText
            android:id="@+id/addressValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="16dp" />

        <!--
             <TextView
            android:id="@+id/genderField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textSize="17sp" />
        -->

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp" >

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.5"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="0.5"
                android:text="@string/male" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:orientation="vertical" >

            <!--
                 <TextView
                android:id="@+id/dateOfBirthField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_birth"
                android:textSize="17sp" />
            -->

            <TextView
                android:id="@+id/dateOfBirthValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:padding="16dp"
                android:textSize="17sp" />

        </LinearLayout>

        <!--
             <TextView
            android:id="@+id/mobileNumberField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mobile_number"
            android:textSize="17sp" />
        -->

        <TextView
            android:id="@+id/mobileNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/mobileNumberValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:padding="16dp" />

        <Button
            android:id="@+id/submitApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="16dp"
            android:text="@string/submit_application" />
    </LinearLayout>

</ScrollView>